--- a/assets/sass/components/_news-listing.scss
+++ b/assets/sass/components/_news-listing.scss
@@ -1,10 +1,6 @@
 .news .content-header {
   background: $abyss url(../images/post-header-bg.png) no-repeat;
-  height: em(400);
-
-  section.title {
-    top: 50%;
-  }
+  background-size: cover;
 }
 
 .news .newest {
